Utilizing tag list component in more places, fixing bug with tag list excess count, paramaterizing max visible tags in tag list

--- a/app/styles/components/_card.scss
+++ b/app/styles/components/_card.scss
@@ -16,7 +16,7 @@
         0 4px 5px rgba(125, 125, 125, 0.10),
         0 8px 10px rgba(125, 125, 125, 0.05);
     border: 1px solid $white-darker;
-    border-radius: 2px;
+    border-radius: 8px;
     transition: opacity, box-shadow 0.2s ease;
     cursor: pointer;
     display: flex;
