--- a/app/styles/components/_modal.scss
+++ b/app/styles/components/_modal.scss
@@ -9,7 +9,7 @@
     width: 60%;
     max-height: 70%;
     padding: 24px;
-    border-radius: 2px;
+    border-radius: 8px;
     border: 1px solid $white-darker;
     background-color: $white;
     box-shadow: 0 1px 10px 0 rgba(0, 0, 0, 0.15);
